--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.1",
-        "bootstrap": "^4.5.3"
+        "bootstrap": "^4.5.3",
+        "font-awesome": "^4.7.0"
     }
 }
