--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "bootstrap": "^4.5.3",
         "cross-env": "^7.0",
         "jquery": "^3.5.1",
+        "jquery-ui": "^1.12.1",
+        "jquery.easing": "^1.4.1",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
