--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
     },
     "devDependencies": {
         "axios": "^0.19",
-        "bootstrap": "^4.5.3",
+        "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
-        "jquery": "^3.5.1",
+        "jquery": "^3.2",
         "jquery-ui": "^1.12.1",
         "jquery.easing": "^1.4.1",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
-        "popper.js": "^1.16.1",
-        "resolve-url-loader": "^3.1.0",
-        "sass": "^1.29.0",
-        "sass-loader": "^8.0.2",
-        "vue-template-compiler": "^2.6.12"
+        "popper.js": "^1.12",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.20.1",
+        "sass-loader": "^8.0.0",
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.1",
