--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.1",
         "bootstrap": "^4.5.3",
-        "font-awesome": "^4.7.0"
+        "font-awesome": "^4.7.0",
+        "startbootstrap-sb-admin-2": "^4.1.3"
     }
 }
